--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -1,9 +1,8 @@
 <div class="flex-row timeline">
 
-    <div *ngFor='let timeSlot of timeSlots' (click)='onSlotClicked(timeSlot)' #timeSlot
-        class="flex-col center-row timeline__box w-100 {{timeSlot.status}} {{ isSelected(timeSlot) ? 'selected' : '' }}">
-        <div class='timeline__circle'>
-        </div>
+    <div *ngFor='let timeSlot of timeSlots' (click)='onSlotClicked(timeSlot)'
+        class="flex-col center-row timeline__box w-100 {{ timeSlot.status }} {{ isSelected(timeSlot) ? 'selected' : '' }}">
+        <div class='timeline__circle'> </div>
         <div class='flex-col timeline__text-group'>
             <span class='timeline__status'>
                 {{ timeSlot.status === 'free' ? 'Свободно' : 'Занято' }}
