--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,8 @@
 @import './styles/datepicker.scss';
 @import '../node_modules/swiper/swiper-bundle.min.css';
 
+// @import '@angular/material/prebuilt-themes/magenta-violet.css';
+
 @import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
 @import url('https://fonts.cdnfonts.com/css/blacker-sans-display-trial');
 @import url('https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&display=swap');
