--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,18 +11,18 @@
         </div>
 
         <!-- Sigma Logo -->
-        <div (click)="navigateToSection(sections[0])" class="flex-col h-100 center-row logo sigma-font">
+        <div (click)="navigateToSection(MainSections.Home)" class="flex-col h-100 center-row logo sigma-font">
             <span class="logo__label">ΣΙΓΜΑ</span>
             <span class="logo__sublabel">вокальное место</span>
         </div>
 
         <!-- Desktop menu buttons -->
         <div class="flex-row center-row h-100 flex-grow menu andika-regular">
-            <button (click)="navigateToSection(sections[0])" id="home-button" mat-button mat-raised-button
+            <button (click)="navigateToSection(MainSections.Home)" id="home-button" mat-button mat-raised-button
                 data-section="home-section">
                 Главная
             </button>
-            <button (click)="navigateToSection(sections[1])" id="about-button" mat-button mat-raised-button
+            <button (click)="navigateToSection(MainSections.About)" id="about-button" mat-button mat-raised-button
                 data-section="about-section">
                 О ΣΙΓΜΑ
             </button>
@@ -31,17 +31,17 @@
                 <div class="swiper-container swiper-sections" [class.first-section]="swiperSectionID === 1"
                     [class.second-section]="swiperSectionID === 2" [class.third-section]="swiperSectionID === 3">
                     <div class="swiper-wrapper sections-wrapper">
-                        <p (click)="navigateToSection(sections[2])"
+                        <p (click)="navigateToSection(MainSections.Classes)"
                             class="flex-row center-all swiper-slide sections-slide"
                             [class.default-no-section]="swiperSectionID === 0" id="classes-button">
                             Занятия
                         </p>
-                        <p (click)="navigateToSection(sections[3])"
+                        <p (click)="navigateToSection(MainSections.Tutor)"
                             class="flex-row center-all swiper-slide sections-slide"
                             [class.default-no-section]="swiperSectionID === 0" id="tutor-button">
                             Преподаватель
                         </p>
-                        <p (click)="navigateToSection(sections[4])"
+                        <p (click)="navigateToSection(MainSections.Studio)"
                             class="flex-row center-all swiper-slide sections-slide"
                             [class.default-no-section]="swiperSectionID === 0" id="studio-button">
                             Студия
@@ -50,7 +50,7 @@
                 </div>
             </button>
 
-            <button (click)="navigateToSection(sections[5])" id="contact-button" mat-button mat-raised-button
+            <button (click)="navigateToSection(MainSections.Contacts)" id="contact-button" mat-button mat-raised-button
                 data-section="contacts-section">
                 Контакты
             </button>
@@ -59,7 +59,7 @@
             </button>
             <button id="account-button" mat-icon-button (click)="handleLogin()">
                 <mat-icon *ngIf="!currentUserData()">login</mat-icon>
-                <img *ngIf="currentUserData() as userData" [src]="userData.img" alt="userpic">
+                <img *ngIf="currentUserData() as userData" [src]="userData.img || imgDefault" alt="userpic">
             </button>
         </div>
 
@@ -74,32 +74,37 @@
 <!-- Dropdown menu for mobile view -->
 <div class="dropdown-background andika-regular" (click)="closeMenu()">
     <div class="flex-col menu-dropdown" (click)="$event.stopPropagation()">
-        <button (click)="navigateToSection(sections[0])" mat-button mat-raised-button data-section="home-section">
+        <button (click)="navigateToSection(MainSections.Home)" mat-button mat-raised-button data-section="home-section">
             <div class="flex-row center-row button-content">
                 <mat-icon>home</mat-icon>Главная
             </div>
         </button>
-        <button (click)="navigateToSection(sections[1])" mat-button mat-raised-button data-section="about-section">
+        <button (click)="navigateToSection(MainSections.About)" mat-button mat-raised-button
+            data-section="about-section">
             <div class="flex-row center-row button-content">
                 <mat-icon>functions</mat-icon>О ΣΙΓΜΑ
             </div>
         </button>
-        <button (click)="navigateToSection(sections[2])" mat-button mat-raised-button data-section="classes-section">
+        <button (click)="navigateToSection(MainSections.Classes)" mat-button mat-raised-button
+            data-section="classes-section">
             <div class="flex-row center-row button-content">
                 <mat-icon>music_note</mat-icon>Занятия
             </div>
         </button>
-        <button (click)="navigateToSection(sections[3])" mat-button mat-raised-button data-section="tutor-section">
+        <button (click)="navigateToSection(MainSections.Tutor)" mat-button mat-raised-button
+            data-section="tutor-section">
             <div class="flex-row center-row button-content">
                 <mat-icon>school</mat-icon>Преподаватель
             </div>
         </button>
-        <button (click)="navigateToSection(sections[4])" mat-button mat-raised-button data-section="studio-section">
+        <button (click)="navigateToSection(MainSections.Studio)" mat-button mat-raised-button
+            data-section="studio-section">
             <div class="flex-row center-row button-content">
                 <mat-icon>mic</mat-icon>Студия
             </div>
         </button>
-        <button (click)="navigateToSection(sections[5])" mat-button mat-raised-button data-section="contacts-section">
+        <button (click)="navigateToSection(MainSections.Contacts)" mat-button mat-raised-button
+            data-section="contacts-section">
             <div class="flex-row center-row button-content">
                 <mat-icon>mail</mat-icon>Контакты
             </div>
