--- a/src/app/components/admin-timeline/admin-timeline.component.scss
+++ b/src/app/components/admin-timeline/admin-timeline.component.scss
@@ -62,11 +62,12 @@ mat-form-field {
             padding: 8px;
             border: 1px solid #ccc;
             border-radius: 4px;
-            background-color: #fff;
+            background-color: var(--light-color);
             font-size: 16px;
         }
 
         select {
+            border-radius: 4px;
             font-family: "Didact Gothic", sans-serif;
             font-size: 16px;
             flex-grow: 1;
