--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -70,7 +70,7 @@
                 </div>
                 <!-- Phone (Bottom-right sector) -->
                 <div class="flex-row center-row contact-info phone">
-                    <label class="label">phone:</label>
+                    <label class="label">телефон:</label>
                     <input class="input" type="text" [(ngModel)]="userData.phone" [readonly]="!isEditing"
                         [ngClass]="{ 'editable': isEditing }" />
                 </div>
