--- a/src/app/components/admin-timeline/admin-timeline.component.html
+++ b/src/app/components/admin-timeline/admin-timeline.component.html
@@ -10,8 +10,8 @@
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-date-range-picker #picker>
                 <mat-date-range-picker-actions>
-                    <button mat-raised-button matDateRangePickerCancel>Отменить</button>
-                    <button mat-raised-button matDateRangePickerApply>Подтвердить</button>
+                    <button mat-raised-button matDateRangePickerCancel>отменить</button>
+                    <button mat-raised-button matDateRangePickerApply>подтвердить</button>
                 </mat-date-range-picker-actions>
             </mat-date-range-picker>
         </mat-form-field>
@@ -20,12 +20,13 @@
     <!-- Display Box -->
     <div class="display-box">
         <h3 class="display-box__title">Карточка занятия</h3>
+        <mat-divider></mat-divider>
         <form [formGroup]="displayForm">
             <div class="form-group form-group_relative">
                 <div class="utility-btn utility-btn_details" (click)="toggleStatusEdit()">
                     <mat-icon>{{ isStatusEditing ? 'done_all' : 'edit' }}</mat-icon>
                 </div>
-                <label for="status">Статус:</label>
+                <label for="status">статус:</label>
                 <select id="status" formControlName="status" #statusSelect
                     (change)="onStatusChange(statusSelect.value)">
                     <option value="" disabled>-- Изменить статус --</option>
@@ -35,23 +36,23 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="date">Дата:</label>
+                <label for="date">дата:</label>
                 <input id="date" type="text" formControlName="date" readonly />
             </div>
             <div class="form-group">
-                <label for="time">Время:</label>
+                <label for="time">время:</label>
                 <input id="time" type="text" formControlName="time" readonly />
             </div>
             <div class="form-group">
-                <label for="membership">Использован абонемент:</label>
+                <label for="membership">использован абонемент:</label>
                 <input id="membership" type="text" formControlName="membership" readonly />
             </div>
             <div class="form-group">
-                <label for="userName">Имя пользователя:</label>
+                <label for="userName">имя ученика:</label>
                 <input id="userName" type="text" formControlName="userName" readonly />
             </div>
             <div class="form-group">
-                <label for="message">Комментарий:</label>
+                <label for="message">комментарий:</label>
                 <input id="message" type="text" formControlName="message" readonly />
             </div>
         </form>
