--- a/src/app/components/new-class-form/new-class-form.component.html
+++ b/src/app/components/new-class-form/new-class-form.component.html
@@ -82,11 +82,11 @@
                     <mat-datepicker #picker>
                         <mat-datepicker-actions>
                             <button mat-raised-button matDatepickerCancel>
-                                Отменить
+                                отменить
                                 <!-- Cancel -->
                             </button>
                             <button mat-raised-button matDatepickerApply>
-                                Подтвердить
+                                подтвердить
                                 <!-- Apply -->
                             </button>
                         </mat-datepicker-actions>
