--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,121 +1,113 @@
 <div class="user-list-container">
 
-    <!-- Search Bar -->
-    <div class="search-bar">
-        <form [formGroup]="searchForm" class="user-form">
-            <mat-form-field appearance="outline" class="search-input">
-                <mat-label>Search Users</mat-label>
-                <input matInput placeholder="Search by name, email, etc." formControlName="search">
-                <mat-icon matSuffix>search</mat-icon>
-            </mat-form-field>
-        </form>
-    </div>
+    <!-- Display Box -->
+    <div class="display-box">
+        <h3>Карточка ученика</h3>
+        <mat-divider></mat-divider>
 
-    <div class="content">
+        <div class="selected-user">
 
-        <!-- Display Box -->
-        <!-- *ngIf="selectedUser" removed -->
-        <div class="display-box" >
-            <h3>User Card</h3>
-            <mat-divider></mat-divider>
-            <div class="user-details">
+            <!-- User Form populated by the selected user -->
+            <form [formGroup]="displayForm" class="flex-col selected-user__details">
 
-                <!-- User Picture -->
-                <div class="user-pic">
+                <!-- User pic and name -->
+                <div class="flex-row user-group">
+                    <!-- User Picture -->
                     <img [src]="selectedUser?.img ? selectedUser?.img : imgDefault" alt="{{ selectedUser?.name }}"
-                        class="user-avatar-large">
-                </div>
-
-                <!-- User Form populated by the selected user -->
-                <form [formGroup]="displayForm" class="user-form">
+                        class="user-group__img">
                     <!-- Name -->
-                    <div class="form-group">
-                        <label>Name:</label>
+                    <div class="form-group user-group__name">
+                        <label>имя:</label>
                         <input type="text" formControlName="name" readonly>
                     </div>
+                </div>
 
-                    <!-- Email -->
-                    <div class="form-group">
-                        <label>Email:</label>
-                        <input type="email" formControlName="email" readonly>
-                    </div>
-
-                    <!-- Telegram -->
-                    <div class="form-group">
-                        <label>Telegram:</label>
-                        <input type="text" formControlName="telegram" readonly>
-                    </div>
-
-                    <!-- Phone -->
-                    <div class="form-group">
-                        <label>Phone:</label>
-                        <input type="text" formControlName="phone" readonly>
-                    </div>
-
+                <div class="flex-row special-group">
                     <!-- Membership Points - Editable -->
                     <div class="form-group membership-group">
                         <div class="utility-btn utility-btn_details" (click)="toggleMembershipEdit()">
                             <mat-icon>{{ isMembershipEditing ? 'done_all' : 'edit' }}</mat-icon>
                         </div>
-
-                        <label>Membership Points:</label>
+                        <label>абонемент:</label>
                         <input type="number" formControlName="membershipPoints" [readonly]="!isMembershipEditing">
                     </div>
-                </form>
+                    <!-- Telegram -->
+                    <div class="form-group flex-grow">
+                        <label>telegram:</label>
+                        <input type="text" formControlName="telegram" readonly>
+                    </div>
+                </div>
 
-                <!-- Classes -->
+                <!-- Phone -->
                 <div class="form-group">
-                    <label>Classes:</label>
-                    <div class="classes-list">
+                    <label>телефон:</label>
+                    <input type="text" formControlName="phone" readonly>
+                </div>
 
-                        <!-- Loaded classes list for the selected user -->
-                        <div class="flex-col center-all flex-grow my-classes__list my-classes__list_desktop">
-                            <div *ngFor="let cls of selectedUserClasses; let last = last"
-                                class="w-100 my-classes__item">
+                <!-- Email -->
+                <div class="form-group">
+                    <label>email:</label>
+                    <input type="email" formControlName="email" readonly>
+                </div>
+            </form>
 
-                                <!-- Delete button -->
-                                <div class="utility-btn utility-btn_details" (click)="deleteClass(cls)">
-                                    <mat-icon>cancel</mat-icon>
-                                </div>
+            <!-- Classes -->
+            <div class="selected-user__classes">
+                <label>занятия:</label>
+                <div class="classes-list">
 
-                                <!-- Class Status -->
-                                <p [ngClass]="{
+                    <!-- Loaded classes list for the selected user -->
+                    <div *ngFor="let cls of selectedUserClasses; let last = last" class="w-100 my-classes__item">
+
+                        <!-- Delete button -->
+                        <div class="utility-btn utility-btn_details" (click)="deleteClass(cls)">
+                            <mat-icon>cancel</mat-icon>
+                        </div>
+
+                        <!-- Class Status -->
+                        <p [ngClass]="{
                                     'my-classes__status_confirmed': cls.status === 'confirmed',
                                     'my-classes__status_cancelled': cls.status === 'cancelled',
                                     'my-classes__status_pending': cls.status === 'pending',
                                     'my-classes__status_executed': cls.status === 'executed'
                                     }" class="my-classes__status">
-                                    Статус: {{ cls.status }}
-                                </p>
-                                <mat-divider></mat-divider>
-                                <div class="flex-row my-classes__time">
-                                    <p>Дата: {{ cls.startdate | date:'dd.MM.yyyy' }}</p>
-                                    <p>Время: {{ cls.startdate | date:'HH:mm' }} - {{ cls.enddate | date:'HH:mm' }} </p>
-                                </div>
-                            </div>
+                            Статус: {{ cls.status }}
+                        </p>
+                        <mat-divider></mat-divider>
+                        <div class="flex-row my-classes__time">
+                            <p>Дата: {{ cls.startdate | date:'dd.MM.yyyy' }}</p>
+                            <p>Время: {{ cls.startdate | date:'HH:mm' }} - {{ cls.enddate | date:'HH:mm' }} </p>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
+    </div>
 
-        <!-- Users Box -->
-        <div class="users-box">
-            <h3>User List</h3>
-            <mat-divider></mat-divider>
-            <div class="users-list">
-                <div class="user-item" *ngFor="let user of filteredUsers()" (click)="selectUser(user)"
-                    [class.selected]="user.id === selectedUser?.id">
-                    <img [src]="user.img ? user.img : imgDefault" alt="{{ user.name }}" class="user-avatar">
-                    <div class="user-info">
-                        <p class="user-name">{{ user.name }}</p>
-                        <p class="user-email">{{ user.email }}</p>
-                    </div>
+    <!-- Users Box -->
+    <div class="users-box">
+        <h3>Список учеников</h3>
+        <mat-divider></mat-divider>
+
+        <!-- Search Bar -->
+        <form [formGroup]="searchForm" class="search-bar">
+            <mat-form-field appearance="outline" class="search-bar__input">
+                <mat-label>Search Users</mat-label>
+                <input matInput placeholder="Search by name, email, etc." formControlName="search">
+                <mat-icon matSuffix>search</mat-icon>
+            </mat-form-field>
+        </form>
+
+        <!-- All users list -->
+        <div class="users-list">
+            <div class="user-item" *ngFor="let user of filteredUsers()" (click)="selectUser(user)"
+                [class.selected]="user.id === selectedUser?.id">
+                <img [src]="user.img ? user.img : imgDefault" alt="{{ user.name }}" class="user-item__avatar">
+                <div class="user-item__info">
+                    <p class="user-item__name">{{ user.name }}</p>
+                    <p class="user-item__email">{{ user.email }}</p>
                 </div>
             </div>
         </div>
-
     </div>
-
 </div>
