--- a/src/app/components/user-page/user-page.component.scss
+++ b/src/app/components/user-page/user-page.component.scss
@@ -1,5 +1,5 @@
 .internal-page-wrapper {
-    padding: 80px 5%;
+    padding: 80px 5% 40px 5%;
     max-width: 800px;
     margin: 0 auto;
 
@@ -43,13 +43,13 @@
         }
 
         &:first-child {
-            border-top-left-radius: 25px;
-            border-bottom-left-radius: 25px;
+            border-top-left-radius: 16px;
+            border-bottom-left-radius: 16px;
         }
 
         &:last-child {
-            border-top-right-radius: 25px;
-            border-bottom-right-radius: 25px;
+            border-top-right-radius: 16px;
+            border-bottom-right-radius: 16px;
         }
 
         &:not(:first-child):not(:last-child) {
