--- a/src/app/components/cancel-class/cancel-class.component.html
+++ b/src/app/components/cancel-class/cancel-class.component.html
@@ -14,8 +14,8 @@
         <p>{{ message }}</p>
     </mat-dialog-content>
     <mat-dialog-actions align="end">
-        <button mat-raised-button (click)="closeDialog()">назад</button>
-        <button mat-raised-button color="warn" (click)="confirmCancel()">подтвердить</button>
+        <button mat-raised-button (click)="closeDialog()">Закрыть</button>
+        <button mat-raised-button color="warn" (click)="confirmCancel()">Подтвердить</button>
     </mat-dialog-actions>
 
 </div>
